// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.admin.v0;

import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "com/digitalasset/canton/domain/admin/v0/sequencer_initialization_snapshot.proto";
import "com/digitalasset/canton/domain/admin/v1/sequencer_initialization_service.proto";
import "com/digitalasset/canton/protocol/v0/sequencing.proto";
import "com/digitalasset/canton/topology/admin/v0/topology_ext.proto";
import "google/protobuf/empty.proto";
import "scalapb/scalapb.proto";

// Service allowing a Domain node to initialize the sequencer instance.
// Should typically only be exposed to the domain node and not all clients
service SequencerInitializationService {
  // Initialize the Sequencer
  // If the sequencer has not been previously initialized the request must either fail or start the sequencer and return successfully.
  // The domain node will expect the SequencerService to be fully available when it receives a successful response
  // and will immediately attempt to use it.
  // If the request is received after the sequencer has been successfully initialized it should return successfully
  // if the domain_id matches the domain that the sequencer has been initialized for, otherwise it should fail.
  rpc Init(InitRequest) returns (InitResponse);
  rpc InitV1(com.digitalasset.canton.domain.admin.v1.InitRequest) returns (InitResponse);
}

// Includes sufficient detail for:
//  - the sequencer to generate its own key to return the public key to the domain node
//  - topology and additional bootstrap information
message InitRequest {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  string domain_id = 1;
  // a topology snapshot up until the point where this sequencer's key is registered
  com.digitalasset.canton.protocol.v0.TopologyTransactions topology_snapshot = 2;
  com.digitalasset.canton.protocol.v0.StaticDomainParameters domain_parameters = 4;
  // optional - snapshot to initialize sequencer from
  SequencerSnapshot snapshot = 3;
}

message InitResponse {
  string key_id = 1;
  com.digitalasset.canton.crypto.v0.SigningPublicKey public_key = 2;

  // Indicate if the initialized sequencer is replicated
  bool replicated = 3;
}

service TopologyBootstrapService {
  // allows sequencer to sequence initial topology transactions before IDM can be authenticated
  rpc Bootstrap(TopologyBootstrapRequest) returns (google.protobuf.Empty);
}

message TopologyBootstrapRequest {
  com.digitalasset.canton.protocol.v0.TopologyTransactions initial_topology_snapshot = 1;
}
